Vending Machine Bluetooth
wifi 접속 과부화로 인한 연결 불안정을 해결하기 위해 근거리에 안정적인 블루투스 통신방식을 도입

--- a/In_Progress/Vending_Machine/.project
+++ b/In_Progress/Vending_Machine/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>final_test_RTOS</name>
+	<name>final_test_BT</name>
 	<comment></comment>
 	<projects>
 	</projects>
